--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 	</scm>
 	
 	<build>
-		<finalName>server</finalName>
+		<finalName>handy-mybatis</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
